Fix grouped static button z-index

--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -80,6 +80,9 @@ $label-colors: $form-colors !default
             z-index: 3
             &:hover
               z-index: 4
+      .button
+        &.is-static
+          z-index: 2
       &.is-expanded
         flex-grow: 1
         flex-shrink: 1
